modify chat app

--- a/src/client/pages/login/index.css
+++ b/src/client/pages/login/index.css
@@ -5,15 +5,15 @@ html{
 *{
     box-sizing: border-box;
 }
-body{
+/* body{
     width: 100%;
     min-height: 90vh;
     background-color: #f2f3f5;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 100px 0;
-}
+    padding: 10px 0;
+} */
 .signup{
     background-color: #fff;
     padding: 90px 75px;
