--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+#root{
+  width: 100%;
+  height: 100%;
+}
 body {
+  width: 100%;
+  height: 100vh;
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
