--- a/src/client/app/App.css
+++ b/src/client/app/App.css
@@ -8,6 +8,15 @@
   height: 40vmin;
   pointer-events: none;
 }
+html {
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
+}
+button, input, optgroup, select, textarea, html {
+  font-family: "Roboto",-apple-system,apple color emoji,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
