--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,36 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html:not(.is-safari):not(.is-ios) .scrollable::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  width: 0.375rem;
+}
+html:not(.is-safari):not(.is-ios) ::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+html:not(.is-safari):not(.is-ios) ::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
+html:not(.is-safari):not(.is-ios) .scrollable::-webkit-scrollbar-thumb {
+  width: 0;
+  height: 0;
+}
+html:not(.is-safari):not(.is-ios) ::-webkit-scrollbar-thumb {
+  opacity: 0;
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+}
+
+html:not(.is-safari):not(.is-ios) .scrollable:hover::-webkit-scrollbar-thumb {
+  min-height: 5rem;
+  max-height: 12.5rem;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, .2);
+  background-color: var(--scrollbar-color);
+  opacity: 1;
+}
